Updated security config